Add more hats and costumes; restructure categories