@@ -1,20 +1,19 @@
 package com.cavetale.wardrobe;
 
 import com.cavetale.mytems.Mytems;
-import java.util.Arrays;
+import com.cavetale.wardrobe.util.Items;
+import java.util.List;
 import lombok.Getter;
 import net.kyori.adventure.text.Component;
+import net.kyori.adventure.text.format.NamedTextColor;
 import net.kyori.adventure.text.format.TextColor;
-import net.kyori.adventure.text.format.TextDecoration;
 import org.bukkit.Material;
 import org.bukkit.Sound;
 import org.bukkit.SoundCategory;
 import org.bukkit.entity.Player;
 import org.bukkit.event.inventory.ClickType;
 import org.bukkit.event.inventory.InventoryClickEvent;
-import org.bukkit.inventory.ItemFlag;
 import org.bukkit.inventory.ItemStack;
-import org.bukkit.inventory.meta.ItemMeta;
 
 @Getter
 public enum Handheld implements WardrobeItem {
@@ -105,20 +104,13 @@ public enum Handheld implements WardrobeItem {
     @Override
     public ItemStack toMenuItem() {
         ItemStack itemStack = mytems.getMytem().createItemStack();
-        ItemMeta meta = itemStack.getItemMeta();
-        meta.displayName(displayName.decoration(TextDecoration.ITALIC, false));
         TextColor yellow = TextColor.color(0xFFFF00);
-        TextColor gray = TextColor.color(0x808080);
-        meta.lore(Arrays.asList(Component.text()
-                                .append(Component.text("Left click", yellow))
-                                .append(Component.text(" to hold in main hand", gray))
-                                .decoration(TextDecoration.ITALIC, false).build(),
-                                Component.text()
-                                .append(Component.text("Right click", yellow))
-                                .append(Component.text(" to hold in off hand", gray))
-                                .decoration(TextDecoration.ITALIC, false).build()));
-        meta.addItemFlags(ItemFlag.values());
-        itemStack.setItemMeta(meta);
+        itemStack.editMeta(meta -> {
+                Items.text(meta, List.of(displayName,
+                                         Component.text("Hand Item", NamedTextColor.DARK_PURPLE),
+                                         Component.text("Left click to hold in main hand", yellow),
+                                         Component.text("Right click to hold in off hand", yellow)));
+            });
         return itemStack;
     }
 
